# sigpy

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  README.rst  asv.conf.json  codecov.yml  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup.py
benchmarks/: benchmarks.py
conda.recipe/: install.sh  meta.yaml
doc/: alg.rst  api.rst  app.rst  conf.py  conv.rst  core.rst  core_alg.rst  core_app.rst  core_linop.rst  core_prox.rst  fft.rst  guide.rst  index.rst  learn.rst  learn_app.rst  learn_util.rst  linop.rst  main.rst  mri.rst  mri_app.rst  mri_linop.rst  mri_samp.rst  mri_sim.rst  mri_util.rst  nufft.rst  plot.rst  plot_image.rst  plot_line.rst  plot_scatter.rst  prox.rst  requirements.txt  signal.rst  thresh.rst  util.rst
docs/: Makefile  conf.py  core.rst  core_alg.rst  core_app.rst  core_linop.rst  core_prox.rst  guide_basic.rst  guide_iter.rst  guide_multi_devices.rst  index.rst  learn.rst  learn_app.rst  make.bat  mri.rst  mri_app.rst  mri_linop.rst  mri_rf.rst  plot.rst  requirements.txt
examples/: CoLab_ImageReconstruction.ipynb
sigpy/: __init__.py  alg.py  alg_test.py  app.py  app_test.py  backend.py  block.py  block_test.py  comm.py  config.py  conv.py  conv_test.py  coord.py  dataset.py  extract_dicom.py  fft.py  fft_test.py  fourier.py  fourier_test.py  index.py  index_test.py  interp.py  interp_test.py  linop.py  linop_test.py  nlls.py  nlop.py  nufft.py  nufft_test.py  plot.py  prox.py  prox_test.py  pytorch.py  sim.py  stream.py  thresh.py  (+4 more)
(+96 files in other folders)
